@@ -66,6 +66,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7959: ctypes callback functions are now registered correctly
+  with the cylce garbage collector.
+
 - Issue #6243: curses.getkey() can segfault when used with ungetch.
   Fix by Trundle and Jerry Chen.
 
